--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+*, ::after {
     margin: 0;
     padding: 0;
 }
@@ -7,11 +7,23 @@ html {
     height: 100%;
 }
 
+nav p {
+    padding: 2px;
+    margin-bottom: 3px;
+}
+
 #goUp, #goDown {
+    padding: 2px;
     font-size: 25px;
     cursor: pointer;
     border: 1px solid black;
 }
+
+#goUp:hover, #goDown:hover {
+    color: blue;
+}
+
+
 
 body {
     height: 100%;
@@ -39,10 +51,24 @@ main {
     background-color: rgba(128, 128, 128, 0.479);
 }
 
-main code {
-    padding: 5px;
+main section:nth-child(1) {
+    display: flex;
+    flex-direction: column;
     flex: 1;
     border: 2px solid;
+    position: relative;
+}
+
+code {
+    padding: 5px;
+    flex: 1;
+}
+
+main section a {
+    color: black;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5px;
 }
 
 
@@ -55,6 +81,8 @@ main section:nth-child(2) {
 
 /* Section de droite */
 #coms {
+    margin-top: 5px;
+    margin-left: 2px;
     flex: 6;
     border-bottom: 2px solid;
 }
@@ -82,6 +110,21 @@ main section:nth-child(2) {
     animation-duration: 1s;
 }
 
+
+#animationSwitch {
+    position: absolute;
+    right: 100%;
+    top: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+}
+
+
+.animationQuestion {
+    animation: animQuestion 300ms;
+}
+
 /* Animation */
 @keyframes shakeX {
 
@@ -103,5 +146,22 @@ main section:nth-child(2) {
     60%,
     80% {
         transform: translateX(10px);
+    }
+}
+
+@keyframes animQuestion {
+    0% {
+        transform: translateX(0);
+        opacity: 0;
+    }
+
+    50% {
+        transform: translateX(100%);
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateX(0);
+        opacity: 0;
     }
 }
