--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ main section:nth-child(2) {
 
 
 .animationQuestion {
-    animation: animQuestion 300ms;
+    animation: animQuestion 1s;
 }
 
 /* Animation */
